todo_node/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:

      containers:
        - name: todobackend
          image: todo-backend-placeholder-image
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3  

          resources:
            requests:
              cpu: "25m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
