todo_node/manifests/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
  namespace: project

spec:
  replicas: 6

  selector:
    matchLabels:
      app: broadcaster

  template:
    metadata:
      labels:
        app: broadcaster

    spec:
      containers:
        - name: broadcaster

          image: rakhicc/broadcaster:v1
