todo_node/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todofrontend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todofrontend
  template:
    metadata:
      labels:
        app: todofrontend
    spec:
      containers:
        - name: todofrontend
          image: rakhicc/todo-frontend:gke-v2
          imagePullPolicy: Always
