todo_node/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todobackend # This is the app as declared in the deployment.
  ports:
    - name: http
      protocol: TCP
      port: 80 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target port in which container is running
