todo_node/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todofrontend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todofrontend # This is the app as declared in the deployment.
  ports:
    - name: http
      protocol: TCP
      port: 80 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 80 # This is the target port
