todo_node/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:

          # ✅ Backend API
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todobackend-svc
                port:
                  number: 80


          # ✅ Frontend UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todofrontend-svc
                port:
                  number: 80
